--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
            
             <div class="cta-container">
                 <div class="cta-buttons">
-                    <a href="https://docs.google.com/document/d/1IbF5Fs5MdZCzPJV19qM9KBGmkzTmmqbJ/edit?usp=sharing&ouid=108307377630207027639&rtpof=true&sd=true" class="btn" target="_blank">Resume</a>
+                    <!-- <a href="https://docs.google.com/document/d/1IbF5Fs5MdZCzPJV19qM9KBGmkzTmmqbJ/edit?usp=sharing&ouid=108307377630207027639&rtpof=true&sd=true" class="btn" target="_blank">Resume</a> -->
                 </div>
                 <div class="social-icons">
                     <a href="https://www.linkedin.com/in/siva-datascientist/" class="social-icon" target="_blank"><i class="fab fa-linkedin"></i></a>
